--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7"
   },
-  "homepage": "."
+  "homepage": "simulador-salario-liquido"
 }
